--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Cinecito de Juan & Adi — Dia pirata muajaja 💚</title>
+    <title>Cinecito de Juan & Adi — te amo cariño 💚</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="data:," />
 </head>
@@ -18,16 +18,16 @@
     <h1 class="title">
         <span class="accent">Juan</span> & <span class="accent">Adi</span>
         <span class="tiny">presentan</span>
-        <span class="feature">La maldicion del perla negra</span>
+        <span class="feature">Los Caballeros</span>
     </h1>
-    <p class="tagline">Noche de película — tú, yo y una aventura pirata arrg 💚🌻</p>
+    <p class="tagline">Nuestro tiempo de peli — tú, yo y ni idea lo que será 💚🌻</p>
 </header>
 
 <main class="container">
     <!-- Reproductor simplificado -->
     <section class="player-shell">
         <iframe
-                src="https://drive.google.com/file/d/1zQo6MzEbxicxn-lzMXovJGrz4AKSZXtu/preview"
+                src="https://drive.google.com/file/d/1S6JPnbaaeoQW0Q-kggMg84_70EcS_G6Y/preview"
                 allow="autoplay; fullscreen"
                 frameborder="0"
                 class="drive-iframe"
